applications/calibre-web/calibre-web-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  host: calibre-web.apps.ocp.igou.systems
  to:
    kind: Service
    name: calibre-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
